Optimized responsive design for the Employees block: Improved layout and styling to ensure seamless viewing across all devices, including adjustments to grid alignment, image scaling, and text wrapping for better user experience on smaller screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -391,7 +391,7 @@
   grid-template-columns: 1fr;
   gap: 2rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 500px) {
   .employees-grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -407,7 +407,7 @@
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  padding: 1.5rem;
+  padding: 0.5rem;
   text-align: center;
 }
 .employees-grid .employee-card__details {
@@ -523,7 +523,7 @@ body[data-theme=dark] .header {
 }
 .header__menu-toggle {
   border: none;
-  background-color: #ffffff;
+  background-color: transparent;
 }
 .header__menu-toggle.header__menu-toggle--active .header__menu-icon {
   background-color: transparent;
