--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -270,7 +270,7 @@
     grid-template-columns: 1fr;
     gap: 2rem;
 
-    @media (min-width: $md) {
+    @media (min-width: $sm) {
       grid-template-columns: repeat(2, 1fr);
     }
     @media (min-width: $lg) {
@@ -284,7 +284,7 @@
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        padding: 1.5rem;
+        padding: 0.5rem;
         text-align: center;
 
         &__details {
